# VirtualController

./: .gitignore  Architecture.md  CMakeLists.txt  GameLibraryLauncher.lnk  README.md  TEST_SERVER.md  build.bat  debug_proxy.py  myAirConsole_design_brief.md  test_controller_server.py
.github/workflows/: build.yml
games/: GamesStructure.md
games/snake/: CMakeLists.txt  build.bat  snake.cpp  snake_client.cpp
games/tester/: CMakeLists.txt  build.bat  tester.cpp
launcher/: CMakeLists.txt  build.bat
launcher/src/core/: MainWindow.cpp  MainWindow.h  main.cpp
launcher/src/input/: LocalInputSource.cpp  LocalInputSource.h
launcher/src/managers/: MultiControllerManager.cpp
launcher/src/network/: WebSocketInputSource.h
launcher/src/scanner/: GameScanner.cpp
launcher/src/ui/: ControllerTab.cpp  ControllerTab.h  GameLibraryTab.cpp  GameLibraryTab.h  VirtualControllerWindow.cpp  VirtualControllerWindow.h
mobile_controller/: README.md  analysis_options.yaml  pubspec.yaml
mobile_controller/android/app/: build.gradle.kts
mobile_controller/android/app/src/main/: AndroidManifest.xml
mobile_controller/ios/Runner/: AppDelegate.swift  Info.plist
mobile_controller/ios/Runner.xcodeproj/: project.pbxproj
mobile_controller/lib/: main.dart
mobile_controller/lib/models/: controller_input.dart
mobile_controller/lib/screens/: connection_screen.dart  controller_screen.dart  qr_scan_screen.dart
mobile_controller/lib/services/: controller_service.dart
mobile_controller/lib/widgets/: controller_button.dart  dpad.dart  joystick.dart
server/: CMakeLists.txt  README.md
server/src/: Connection.cpp  Connection.h  GameLogic.cpp  GameLogic.h  GameServer.cpp  GameServer.h  Protocol.h  main.cpp
src/: ControllerTab.cpp  ControllerTab.h  GameInfo.h  GameLibraryTab.h  GameScanner.cpp  GameScanner.h  MainWindow.h  VirtualControllerWindow.cpp  VirtualControllerWindow.h  Virtualgamepadmanager.cpp  Virtualgamepadmanager.h
src/core/: MainWindow.cpp  MainWindow.h  main.cpp
src/interfaces/: IInputSource.h
src/managers/: MultiControllerManager.h
src/network/: WebSocketInputSource.cpp  WebSocketInputSource.h
src/scanner/: GameInfo.h  GameScanner.cpp
src/ui/: ControllerTab.cpp  ControllerTab.h  GameLibraryTab.cpp  WebSocketTab.cpp  WebSocketTab.h
